scripts/nullaway/annotator/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8.txt
../annotator/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/TDirectory.java:173: error: [NullAway] dereferenced expression dir is @Nullable
        for (TDirectory dir = this;; dir = dir.parent) {
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/TDirectory.java:189: error: [NullAway] dereferenced expression seekKeysRecord is @Nullable
        fNbytesKeys = seekKeysRecord.size;
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/classes/hist/TH1.java:115: error: [NullAway] dereferenced expression fBuffer is @Nullable
            out.writeDouble(fBuffer[i]);
                                   ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
